[gd_scene load_steps=17 format=2]

[ext_resource path="res://scripts/Purchasing.gd" type="Script" id=1]
[ext_resource path="res://fonts/MinionPro-Regular.otf" type="DynamicFontData" id=2]
[ext_resource path="res://images/purchasing_scene_ .png" type="Texture" id=3]
[ext_resource path="res://buttons/posters_button.png" type="Texture" id=4]
[ext_resource path="res://buttons/_buy_rice_button.png" type="Texture" id=5]
[ext_resource path="res://buttons/_buy_nori_button.png" type="Texture" id=6]
[ext_resource path="res://buttons/_buy_spam_button.png" type="Texture" id=7]
[ext_resource path="res://buttons/_buy_wrap_button.png" type="Texture" id=8]
[ext_resource path="res://buttons/_continue_button.png" type="Texture" id=9]
[ext_resource path="res://buttons/help_button.png" type="Texture" id=10]
[ext_resource path="res://images/Footer.png" type="Texture" id=11]
[ext_resource path="res://fonts/CooperBlackStd.otf" type="DynamicFontData" id=12]

[sub_resource type="DynamicFont" id=4]
size = 50
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=2]
size = 100
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 120
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 37
font_data = ExtResource( 12 )

[node name="purchasing_scene" type="Node2D"]
script = ExtResource( 1 )

[node name="purchasing_background" type="Sprite" parent="."]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )
centered = false

[node name="subtitle" type="Label" parent="."]
margin_top = 83.0
margin_right = 1024.0
margin_bottom = 197.0
rect_pivot_offset = Vector2( 569, 248 )
input_pass_on_modal_close_click = false
custom_colors/font_color = Color( 0.0392157, 0, 0.576471, 1 )
custom_fonts/font = SubResource( 4 )
text = "What supplies do you need?"
align = 1
valign = 1

[node name="Footer" type="Sprite" parent="."]
position = Vector2( 0, 612 )
scale = Vector2( 0.25, 0.25 )
z_index = 5
texture = ExtResource( 11 )
centered = false

[node name="SpamCountLabel" type="Label" parent="Footer"]
anchor_right = 0.0260663
margin_left = 2420.0
margin_top = 328.0
margin_right = 2466.0
margin_bottom = 410.0
rect_pivot_offset = Vector2( 136, 184 )
size_flags_horizontal = 2
size_flags_vertical = 2
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "0"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PlasticCountLabel" type="Label" parent="Footer"]
margin_left = 3096.0
margin_top = 444.0
margin_right = 3288.0
margin_bottom = 526.0
rect_pivot_offset = Vector2( 136, 184 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="RiceCountLabel" type="Label" parent="Footer"]
anchor_right = 0.0251185
margin_left = 2420.0
margin_top = 444.0
margin_right = 2466.0
margin_bottom = 526.0
rect_pivot_offset = Vector2( 136, 184 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "0"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="NoriCountLabel" type="Label" parent="Footer"]
margin_left = 2836.0
margin_top = 328.0
margin_right = 3124.0
margin_bottom = 412.0
rect_pivot_offset = Vector2( 136, 184 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="PosterCountLabel" type="Label" parent="Footer"]
margin_left = -1072.0
margin_top = -1032.0
margin_right = -848.0
margin_bottom = -993.0
rect_pivot_offset = Vector2( 136, 184 )
custom_colors/font_color = Color( 0.0745098, 0.0588235, 0.607843, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="Day" type="Label" parent="Footer"]
margin_left = 736.0
margin_top = 336.0
margin_right = 1280.0
margin_bottom = 560.0
rect_pivot_offset = Vector2( 173, 57 )
input_pass_on_modal_close_click = false
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "X / Y"
align = 1
valign = 1

[node name="Balance" type="Label" parent="Footer"]
margin_left = 3516.0
margin_top = 256.0
margin_right = 3711.0
margin_bottom = 358.0
rect_pivot_offset = Vector2( 173, 57 )
input_pass_on_modal_close_click = false
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "$0"
align = 1
valign = 1

[node name="Condition" type="Label" parent="Footer"]
margin_left = 1344.0
margin_top = 336.0
margin_right = 2016.0
margin_bottom = 556.0
rect_pivot_offset = Vector2( 74, 28 )
input_pass_on_modal_close_click = false
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "condition"
align = 1
valign = 1

[node name="ContinueButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 408.0
margin_top = 569.0
margin_right = 1236.0
margin_bottom = 782.0
rect_scale = Vector2( 0.25, 0.25 )
icon = ExtResource( 9 )
flat = true

[node name="Subtitle" type="Label" parent="."]
visible = false
margin_top = 75.5
margin_right = 1024.0
margin_bottom = 189.5
rect_pivot_offset = Vector2( 569, 248 )
input_pass_on_modal_close_click = false
custom_colors/font_color = Color( 0.0392157, 0, 0.576471, 1 )
custom_fonts/font = SubResource( 3 )
text = "What supplies do you need to buy?"
align = 1
valign = 1

[node name="NoriBuyButton" type="Button" parent="."]
margin_left = 788.0
margin_top = 238.0
margin_right = 1201.0
margin_bottom = 587.0
rect_scale = Vector2( 0.25, 0.25 )
size_flags_vertical = 2
text = "Buy"
icon = ExtResource( 6 )
flat = true
icon_align = 1

[node name="RiceBuyButton" type="Button" parent="."]
margin_left = 363.0
margin_top = 406.0
margin_right = 783.0
margin_bottom = 774.0
rect_scale = Vector2( 0.25, 0.25 )
size_flags_vertical = 2
text = "Buy"
icon = ExtResource( 5 )
flat = true
icon_align = 1

[node name="PlasticBuyButton" type="Button" parent="."]
margin_left = 785.0
margin_top = 405.0
margin_right = 1198.0
margin_bottom = 781.0
rect_scale = Vector2( 0.25, 0.25 )
size_flags_vertical = 2
text = "Buy"
icon = ExtResource( 8 )
flat = true
icon_align = 1

[node name="SpamBuyButton" type="Button" parent="."]
margin_left = 359.0
margin_top = 237.0
margin_right = 779.0
margin_bottom = 589.0
rect_scale = Vector2( 0.25, 0.25 )
size_flags_vertical = 2
text = "Buy"
icon = ExtResource( 7 )
flat = true
icon_align = 1

[node name="PosterBuyButton" type="Button" parent="."]
margin_left = 636.0
margin_top = 569.0
margin_right = 1365.0
margin_bottom = 723.0
rect_scale = Vector2( 0.25, 0.25 )
size_flags_vertical = 2
text = "Buy Posters ($20)"
icon = ExtResource( 4 )
flat = true
icon_align = 1

[node name="HelpButton" type="Button" parent="."]
margin_left = 203.0
margin_top = 569.0
margin_right = 933.0
margin_bottom = 723.0
rect_scale = Vector2( 0.25, 0.25 )
size_flags_vertical = 2
icon = ExtResource( 10 )
flat = true
clip_text = true
icon_align = 1

[node name="HSlider" type="HSlider" parent="."]
margin_left = 51.0
margin_top = 574.0
margin_right = 178.0
margin_bottom = 596.0
min_value = -30.0
max_value = 0.0
value = -15.0

[node name="Label" type="Label" parent="HSlider"]
margin_left = -1.0
margin_top = 22.0
margin_right = 127.0
margin_bottom = 53.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Volume
"
align = 1
valign = 1

[connection signal="pressed" from="ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="NoriBuyButton" to="." method="_on_NoriBuyButton_pressed"]
[connection signal="pressed" from="RiceBuyButton" to="." method="_on_RiceBuyButton_pressed"]
[connection signal="pressed" from="PlasticBuyButton" to="." method="_on_PlasticBuyButton_pressed"]
[connection signal="pressed" from="SpamBuyButton" to="." method="_on_SpamBuyButton_pressed"]
[connection signal="pressed" from="PosterBuyButton" to="." method="_on_PosterBuyButton_pressed"]
[connection signal="pressed" from="HelpButton" to="." method="_on_HelpButton_pressed"]
[connection signal="value_changed" from="HSlider" to="." method="_on_HSlider_value_changed"]
